# high-assurance-api

./: .bandit  .coveragerc  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .mutmut-config  .pip-audit-ignore  .pre-commit-config.yaml  .secrets.baseline  .spectral.yaml  CHANGELOG.md  Dockerfile  Dockerfile.prod  EXPLANATION.md  Makefile  PIPELINE.md  README.md  RUNBOOK.md  alembic.ini  argocd-app.yaml  checkov_argo.json  checkov_docker.json  checkov_k8s.json  checkov_k8s.sarif  conftest.py  coverage.xml  docker-compose-concourse.yml  docker-compose.monitoring.yml  docker-compose.test.yml  docker-compose.yml  finalize_api.py  generate_audit_bundle.sh  grafana-dashboard.json  hardware_matrix.csv  hardware_matrix.md  hardware_stats_matrix.csv  hardware_stats_matrix.md  hsa  (+25 more)
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  devsecops.yml  fda_pipeline.yml  fossa_scan.yml  gitops.yml  high-assurance-pipeline.yml  iac_scanner.yml  leakix_scan.yml  master-pipeline.yml  visualization.yml
.semgrep/: rules.yaml
alembic/: env.py
alembic/versions/: 7f4d70c2e9ae_initial_saas_schema_accounts_.py
apps/compliance-dashboard/: Dockerfile  next.config.js  package-lock.json  package.json
audit_reports/: FDA_Evidence_Bundle_2026-03-12.zip.sha256  test_results.xml
audit_reports/FDA_Evidence_Bundle_2026-03-12/: performance_summary.txt
docs/: OPERATIONS_SRE.md  SECURITY_POLICIES.md  WARNING_SUPPRESSION.md  runbook.md
falco/: falco_rules.local.yaml
grafana/dashboards/: slo_dashboard.json
infra/: prometheus.yml
infra/k8s/: 01-egress-metadata-block.yaml
infra/terraform/: ecs-metadata-block.tf
jenkins/pipelines/: Jenkinsfile
k8s/: argocd-app.yaml  chaos_network_delay.yaml  deployment.yaml  istio-security.yaml  namespace.yaml  network-policy.yaml  service.yaml
migrations/: env.py
migrations/versions/: a5645b04229d_add_auth_fields_to_accounts.py  d8d6ec8953ab_initial_baseline.py
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana/: flask-dashboard.json
n8n_workflows/: advanced_incident_response.json
policies/: api_security.rego  docker_security.rego
proofs/: TransferLogic.tla
scripts/: exposure_audit.py  sonar_report_fetcher.py
source ~/: .bashrc
src/: auth.py  config.py  csv_validator.py  database.py  dlp_processor.py  egress_client.py  logger.py  main.py  models.py  openapi.yaml  report_generator.py  security.py  slo.py  sonar_report_fetcher.py  telemetry.py  worker.py
src/routes/: __init__.py  admin_routes.py  auth_routes.py  dashboard_routes.py  health_routes.py  route_utils.py  transfer_routes.py  upload_routes.py
tests/: conftest.py
(+133 files in other folders)
